--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
   <title id="title">HC1</title>
+  <script src="main.js"></script>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <!--TODO: Startup animation-->
 </head>
 <body>
-  <p>hi</p>
+  
 </body>
